fix btn font weight,testimonial quote, blue backgroud,glossary related product need spacing

--- a/src/client/scss/vmware/components/card.scss
+++ b/src/client/scss/vmware/components/card.scss
@@ -24,7 +24,7 @@
     &.LeftImageCard {
         .card-title {
             //font-size: 20px;
-            line-height: normal !important;
+            // line-height: normal !important;
         }
 
         .card-footer {
@@ -59,7 +59,7 @@
         padding-top: 12px;
         text-align: center;
         font-size: 25px;
-        //line-height: 33px;
+        line-height: 33px;
     }
 }
 
