--- a/src/client/scss/vmware/components/header-vmware.scss
+++ b/src/client/scss/vmware/components/header-vmware.scss
@@ -1,4 +1,4 @@
-/* 
+/*
     components/header-vmware.scss
     loads after header.scss & header-explore.scss
     contains mods specific to vmware for those files
@@ -31,6 +31,7 @@
 
             button.dropdown-toggle {
                 height: 22px;
+                    color: $color-primary;
 
                 i {
                     margin-left: 6px;
@@ -47,18 +48,18 @@
 
                 .dropdown-wrapper {
                     padding: 6px 20px;
-    
+
                     a {
                         text-decoration: none;
                         margin-bottom: 10px;
-    
+
                         &:last-child {
                             margin-bottom: 0;
                         }
                     }
                 }
             }
-            
+
         }
     }
 
@@ -103,12 +104,12 @@
         input {
             height: 38px;
 
-            &:focus { 
+            &:focus {
                 outline: none;
                 border: $color-secondary;
             }
         }
-        
+
 
     }
 
@@ -129,7 +130,7 @@
             height: 42px;
             width: 168px;
         }
-    } 
+    }
 
     nav.header_nav {
         display: flex;
@@ -144,7 +145,7 @@
                 justify-content: space-around;
                 width: 100%;
 
-                .MainNavExploreItem > a, 
+                .MainNavExploreItem > a,
                 .MainNavExploreItem > button,
                 .MainNavExploreItem > .label {
                 font-size: $font-size-lg;
@@ -153,7 +154,7 @@
                 text-decoration: none;
                 text-transform: capitalize;
                 }
-        
+
                 .MainNavExploreItem button.active::before {
                     bottom: calc(100% - 62px);
                   }
@@ -174,13 +175,13 @@
             h2.content-block-title {
                 text-align: left;
               }
-            
+
             ul.cb-cta-link {
                 justify-content: left;
             }
         }
     }
-    
+
 
     .secondary_nav {
         flex-direction: row;
@@ -216,7 +217,7 @@
     @media screen and (max-width: map-get($grid-breakpoints, md) - 1) {
 
         nav.header_nav {
-            padding-left: 12px;
+            padding-left: 15px;
         }
 
         .navBrand {
@@ -224,7 +225,7 @@
                 margin-left: 0;
                 width: 168px;
             }
-    
+
             .menuButton {
                 margin-top: 0;
             }
@@ -236,7 +237,7 @@
                 top: 125px;
             }
         }
-        
+
 
 
     }
