--- a/src/client/scss/vmware/templates/vertical-tab.scss
+++ b/src/client/scss/vmware/templates/vertical-tab.scss
@@ -238,6 +238,8 @@
             margin-top: 10px;
             margin-bottom: 10px;
             border-left: 1px solid $color-grey--700;
+            height: auto;
+        padding: 10px 0;
 
 
         }
